--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-
 [profile.default]
+solc = "0.8.22"
 src = "src"
 out = "out"
 libs = ["lib"]
