--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,5 @@
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 [profile.default]
-solc = "0.8.22"
 src = "src"
 out = "out"
 libs = ["lib"]
@@ -14,9 +13,10 @@ remappings = [
 ]
 
 [rpc_endpoints]
-sepolia = "https://rpc2.sepolia.org"
-# sepolia = "${SEPOLIA_RPC_URL}"
 # aurora-test = "${AURORA_TEST_RPC_URL}"
+sepolia = "${SEPOLIA_RPC_URL}"
+arbitrum-sepolia = "${ARBITRUM_SEPOLIA_RPC_URL}"
 
 [etherscan]
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
+arbitrum-sepolia = { key = "${ABRISCAN_API_KEY}" }
