--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
     "solidity.compileUsingRemoteVersion": "v0.8.22+commit.4fc1097e"
+    // "solidity.compileUsingRemoteVersion": "v0.8.19+commit.7dd6d404"
 }
