--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     // "solidity.compileUsingRemoteVersion": "v0.8.13+commit.abaa5c0e"
-    "solidity.compileUsingRemoteVersion": "v0.8.22+commit.4fc1097e"
+    // "solidity.compileUsingRemoteVersion": "v0.8.22+commit.4fc1097e"
+    "solidity.compileUsingRemoteVersion": "v0.8.23+commit.f704f362"
     // "solidity.compileUsingRemoteVersion": "v0.8.19+commit.7dd6d404"
 }
