--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,7 @@ auto_detect_remappings = true
 remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/",
     "forge-std/=lib/forge-std/src/",
+    #@chainlink/=
 ]
 
 [rpc_endpoints]
