--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
+    "@pythnetwork/entropy-sdk-solidity": "^1.3.0",
     "web3": "^4.4.0"
   }
 }
